feat: get tnx history
