# internal/infrastructure/db/sqlc/transactions.sql.go
@@ -14,7 +14,7 @@ import (
 const createTransaction = `-- name: CreateTransaction :one
 INSERT INTO transactions (id, wallet_id , chain_id, to_address, amount, token_id, gas_price, gas_limit, nonce, status)
 VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10)
-RETURNING id, wallet_id, chain_id, to_address, amount, token_id, gas_price, gas_limit, nonce, status, tx_hash, created_at, updated_at
+RETURNING id, wallet_id, chain_id, to_address, amount, token_id, gas_price, gas_limit, nonce, status, tx_hash, created_at, updated_at, from_address
 `
 
 type CreateTransactionParams struct {
@@ -58,12 +58,64 @@ func (q *Queries) CreateTransaction(ctx context.Context, arg CreateTransactionPa
 		&i.TxHash,
 		&i.CreatedAt,
 		&i.UpdatedAt,
+		&i.FromAddress,
 	)
 	return i, err
 }
 
+const getPaginatedTransactions = `-- name: GetPaginatedTransactions :many
+SELECT id, wallet_id, chain_id, to_address, amount, token_id, gas_price, gas_limit, nonce, status, tx_hash, created_at, updated_at, from_address
+FROM transactions
+WHERE from_address = $1
+   OR to_address = $1
+ORDER BY created_at DESC
+LIMIT $2
+OFFSET $3
+`
+
+type GetPaginatedTransactionsParams struct {
+	FromAddress pgtype.Text
+	Limit       int32
+	Offset      int32
+}
+
+func (q *Queries) GetPaginatedTransactions(ctx context.Context, arg GetPaginatedTransactionsParams) ([]Transaction, error) {
+	rows, err := q.db.Query(ctx, getPaginatedTransactions, arg.FromAddress, arg.Limit, arg.Offset)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []Transaction
+	for rows.Next() {
+		var i Transaction
+		if err := rows.Scan(
+			&i.ID,
+			&i.WalletID,
+			&i.ChainID,
+			&i.ToAddress,
+			&i.Amount,
+			&i.TokenID,
+			&i.GasPrice,
+			&i.GasLimit,
+			&i.Nonce,
+			&i.Status,
+			&i.TxHash,
+			&i.CreatedAt,
+			&i.UpdatedAt,
+			&i.FromAddress,
+		); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
+
 const getTransaction = `-- name: GetTransaction :one
-SELECT id, wallet_id, chain_id, to_address, amount, token_id, gas_price, gas_limit, nonce, status, tx_hash, created_at, updated_at FROM transactions
+SELECT id, wallet_id, chain_id, to_address, amount, token_id, gas_price, gas_limit, nonce, status, tx_hash, created_at, updated_at, from_address FROM transactions
 WHERE id = $1 LIMIT 1
 `
 
@@ -84,12 +136,13 @@ func (q *Queries) GetTransaction(ctx context.Context, id pgtype.UUID) (Transacti
 		&i.TxHash,
 		&i.CreatedAt,
 		&i.UpdatedAt,
+		&i.FromAddress,
 	)
 	return i, err
 }
 
 const getTransactionsByWalletID = `-- name: GetTransactionsByWalletID :many
-SELECT id, wallet_id, chain_id, to_address, amount, token_id, gas_price, gas_limit, nonce, status, tx_hash, created_at, updated_at FROM transactions
+SELECT id, wallet_id, chain_id, to_address, amount, token_id, gas_price, gas_limit, nonce, status, tx_hash, created_at, updated_at, from_address FROM transactions
 WHERE wallet_id = $1
 `
 
@@ -116,6 +169,7 @@ func (q *Queries) GetTransactionsByWalletID(ctx context.Context, walletID pgtype
 			&i.TxHash,
 			&i.CreatedAt,
 			&i.UpdatedAt,
+			&i.FromAddress,
 		); err != nil {
 			return nil, err
 		}
@@ -131,7 +185,7 @@ const updateTransaction = `-- name: UpdateTransaction :one
 UPDATE transactions 
 SET (status, tx_hash, gas_price, gas_limit, nonce) = ($2, $3, $4, $5, $6)
 WHERE id = $1
-RETURNING id, wallet_id, chain_id, to_address, amount, token_id, gas_price, gas_limit, nonce, status, tx_hash, created_at, updated_at
+RETURNING id, wallet_id, chain_id, to_address, amount, token_id, gas_price, gas_limit, nonce, status, tx_hash, created_at, updated_at, from_address
 `
 
 type UpdateTransactionParams struct {
@@ -167,6 +221,7 @@ func (q *Queries) UpdateTransaction(ctx context.Context, arg UpdateTransactionPa
 		&i.TxHash,
 		&i.CreatedAt,
 		&i.UpdatedAt,
+		&i.FromAddress,
 	)
 	return i, err
 }
